fixed spacing in main placeholder so Nav doesn't occupy the space

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,6 +78,7 @@ main {
     background-color: lightblue;
     /*Make main element take up surplus spcace to push footer to bottom*/
     flex: 1 0 auto;
+    margin-top:47px;
 }
 
 /*footer*/
